--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        UnityLoader.instantiate("gameContainer", "Build/game.json", {onProgress: UnityProgress});
+        UnityLoader.instantiate("gameContainer", "Build/Web.json", {onProgress: UnityProgress});
     </script>
     <style>
         * {
