--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             position: absolute;
         }
 
-        canvas, .webgl-content, #gameContainer {
+        canvas, .webgl-content, #unityContainer {
             width: 100%;
             height: 100%;
         }
